--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest",
+    "test": "node src/test.js",
     "create-admin": "node src/scripts/createAdmin.js"
   },
   "keywords": [
@@ -33,8 +33,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   }
 }
